--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,45 @@
 # Dependencies
 node_modules/
-package-lock.json
-yarn.lock
+/.pnp
+.pnp.js
 
-# Environment variables
-.env
-.env.local
-.env*.local
-server/.env
-client/.env.local
+# Testing
+/coverage
 
-# Build outputs
+# Next.js
+/.next/
+/out/
+client/.next/
+client/out/
+
+# Production
+/build
 dist/
-build/
-.next/
-out/
 
-# Logs
-*.log
+# Misc
+.DS_Store
+*.pem
+
+# Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# OS files
-.DS_Store
-Thumbs.db
-desktop.ini
+# Local env files
+.env
+.env*.local
+.env.local
+client/.env.local
+server/.env
+
+# Vercel
+.vercel
+
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts
 
 # IDE
 .vscode/
@@ -34,21 +48,5 @@ desktop.ini
 *.swo
 *~
 
-# TypeScript
-*.tsbuildinfo
-
-# Testing
-coverage/
-.nyc_output/
-
-# Temporary files
-*.tmp
-*.temp
-.cache/
-
-# MongoDB data (if using local)
-data/
-
-# Vercel
-.vercel
-
+# OS
+Thumbs.db
