--- a/client/package.json
+++ b/client/package.json
@@ -9,25 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
+    "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
+    "mongodb": "^6.3.0",
     "next": "^14.0.0",
+    "next-intl": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "next-intl": "^3.0.0",
-    "leaflet": "^1.9.4",
-    "react-leaflet": "^4.2.1",
-    "leaflet.markercluster": "^1.5.3"
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
+    "@types/leaflet": "^1.9.4",
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@types/leaflet": "^1.9.4",
-    "tailwindcss": "^3.3.5",
-    "postcss": "^8.4.31",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.51.0",
-    "eslint-config-next": "^14.0.0"
+    "eslint-config-next": "^14.0.0",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.2.2"
   }
 }
-
