--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "recommendation"
   ],
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "dotenv": "^17.2.3",
+    "mongodb": "^7.0.0"
+  }
 }
-
