--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
+  "framework": "nextjs",
   "buildCommand": "npm run build",
   "outputDirectory": ".next",
   "devCommand": "npm run dev",
-  "installCommand": "npm install",
-  "framework": null
+  "installCommand": "npm install"
 }
 
